# QtWebIntegrationView

./: AGENTS.md  Instructions.md
QtWebIntegrationView/: AUTO_GEN_PIPELINE.md  CMakeLists.txt  SUGGESTIONS.md
QtWebIntegrationView/WebHost/: CMakeLists.txt
QtWebIntegrationView/WebHost/include/WebHost/: WebHost.h
QtWebIntegrationView/WebHost/src/: WebHost.cpp
QtWebIntegrationView/app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
QtWebIntegrationView/hostapi/: CMakeLists.txt  ExampleApi.cpp  ExampleApi.h  HostApiClassList.h  HostApiClasses.h  HostApiEventTypes.cpp  HostApiEventTypes.h  HostApiMacros.h  HostApiVersion.h
QtWebIntegrationView/scripts/: generate_web_qrc.cmake  install_deps.sh
QtWebIntegrationView/tests/: CMakeLists.txt  test_webhost.cpp
QtWebIntegrationView/tools/HostApiGenerator/: CMakeLists.txt  main.cpp
QtWebIntegrationView/web/: index.html  main.js  polyfills.js  polyfills.js.map  runtime.js  runtime.js.map  styles.css  styles.css.map
QtWebIntegrationView/web-angular/: ANGULAR_WORKFLOW.md  README.md  angular.json  karma.conf.js  package.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
QtWebIntegrationView/web-angular/scripts/: sync-hostapi.js
QtWebIntegrationView/web-angular/src/: hostapi.d.ts  index.html  styles.css  test.ts
QtWebIntegrationView/web-angular/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
skills/angular-build-packaging/: SKILL.md
skills/api-versioning/: SKILL.md
skills/cmake-codegen/: SKILL.md
skills/npm-packaging-versioning/: SKILL.md
skills/qt-js-serialization/: SKILL.md
skills/qt-metaobject-introspection/: SKILL.md
skills/qt-resource-urlscheme/: SKILL.md
skills/qt-webengine-testing/: SKILL.md
skills/qt-webengine-webchannel/: SKILL.md
skills/ts-angular-codegen/: SKILL.md
